# flatland

./: .gitignore  Cargo.toml  config.json  winnder.json  winner.json
src/: clamped_f32.rs  grid.rs  lib.rs  main.rs  pageflip.rs  polynomail.rs  ranker.rs  simulation.rs
src/simulation/: config.rs  conflict.rs  forcefield.rs  score.rs
