[package]
name = "roots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-ordinalize = "3.1.13"
fixed = "1.23.1"
image = "0.24.7"
kiddo = "2.1.1"
ordered-float = "3.9.1"
palette = "0.7.3"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.105"
show-image = { version = "0.13.1", features = ["image"] }
